--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
         </ul>
 </div>
    </nav>
+   <div class="main"><iframe width="1280" height="720" src="https://www.youtube.com/embed/67stn7Pu7s4?list=PLv2d7VI9OotQ1F92Jp9Ce7ovHEsuRQB3Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+   <div class="description">
+       <div class="hashtags
+       "><a href="#">#드림코딩엘리</a> <a href="#">#유튜브클론코딩</a></div>
+   </div>
+   <div class="maintitle">클론코딩 유튜브 사이트 따라 만들기(HTML+CSS 연습편, 웹 포트폴리오) | 프론트엔드 개발자 입문편: HTML, CSS, Javascript</div>
+   <div class="info"></div>
 </body>
 </html>
