index icons menu

--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
        "><a href="#">#드림코딩엘리</a> <a href="#">#유튜브클론코딩</a></div>
    </div>
    <div class="maintitle">클론코딩 유튜브 사이트 따라 만들기(HTML+CSS 연습편, 웹 포트폴리오) | 프론트엔드 개발자 입문편: HTML, CSS, Javascript</div>
-   <div class="info"></div>
+   <div class="info">
+       //시간
+   </div>
+   <div class="icons">
+       <ul class="icons_menu">
+           <li class="icons_menu_item">
+            <i class="fas fa-thumbs-up">5</i>
+           </li>
+           <li class="icons_menu_item">
+            <i class="fas fa-thumbs-down">5</i>
+           </li>
+           <li class="icons_menu_item">
+            <i class="fas fa-share">5</i>
+           </li>
+           <li class="icons_menu_item">
+            <i class="fas fa-plus">5</i>
+           </li>
+           <li class="icons_menu_item">
+            <i class="fas fa-flag">5</i>
+           </li>
+       </ul>
+   </div>
+   
 </body>
 </html>
