--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
 </head>
 <body>
+    <!-- navbar -->
    <nav id="navbar">
        <div class="navbar_logo">
            <a href="#"><i class="fab fa-youtube"></i>Youtube</a>
@@ -20,12 +21,19 @@
         </ul>
 </div>
    </nav>
+   <!-- navbar -->
+   <!-- 메인동영상화면 -->
    <div class="main"><iframe width="1280" height="720" src="https://www.youtube.com/embed/67stn7Pu7s4?list=PLv2d7VI9OotQ1F92Jp9Ce7ovHEsuRQB3Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+    <!-- 메인동영상화면 -->
+    <!-- 동영상타이틀, 아이콘, 유저 -->
+   <div class="video_description">
    <div class="description">
        <div class="hashtags
        "><a href="#">#드림코딩엘리</a> <a href="#">#유튜브클론코딩</a></div>
    </div>
-   <div class="maintitle">클론코딩 유튜브 사이트 따라 만들기(HTML+CSS 연습편, 웹 포트폴리오) | 프론트엔드 개발자 입문편: HTML, CSS, Javascript</div>
+   <div class="maintitle">클론코딩 유튜브 사이트 따라 만들기(HTML+CSS 연습편, 웹 포트폴리오) | 프론트엔드 개발자 입문편: HTML, CSS, Javascript
+      <button class="maintitle_button"><i class="fas fa-sort-down"></i></button>
+   </div>
    <div class="info">
        //시간
    </div>
@@ -48,6 +56,28 @@
            </li>
        </ul>
    </div>
+   <div class="user_logo">
+       <img src="imgs/나.png" alt="user's profile">
+       <div class="user_name"><h2>coding developer</h2></div>
+       <div class="user_subscriber">구독자 10만 명</div>
+    <button class="user_subscribe">SUBSCRIBE</button>
+   </div>
+</div>
+ <!-- 동영상타이틀, 아이콘, 유저 -->
+ <!-- 다른동영상 -->
+<div class="other_video">
+<div class="upnext">Up next</div>
+<div class="other_videos">
+    <iframe width="826" height="480" src="https://www.youtube.com/embed/X91jsJyZofw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    
+<a href="#" class="othervideos_title">드림코딩엘리 다음영상</a>
+    <div class="video_other"><i class="fas fa-ellipsis-v"></i></div>
+
+</div>
+    <iframe width="826" height="480" src="https://www.youtube.com/embed/7neASrWEFEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><div class="othervideo_title">드림코딩엘리 다음영상</div> <div class="video_other"><i class="fas fa-ellipsis-v"></i></div>
+    <iframe width="826" height="480" src="https://www.youtube.com/embed/wcsVjmHrUQg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><div class="othervideo_title">드림코딩엘리 다음영상</div> <div class="video_other"><i class="fas fa-ellipsis-v"></i></div>
+
+</div>
+   <!-- 다른동영상 -->
 </body>
 </html>
