--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
    <div class="description">
        <div class="hashtags
        "><a href="#">#드림코딩엘리</a> <a href="#">#유튜브클론코딩</a></div>
+       "><a href="#">#드림코딩엘리</a> <a href="#">#유튜브클론코딩</a></div>
    </div>
    <div class="maintitle">클론코딩 유튜브 사이트 따라 만들기(HTML+CSS 연습편, 웹 포트폴리오) | 프론트엔드 개발자 입문편: HTML, CSS, Javascript
       <button class="maintitle_button"><i class="fas fa-sort-down"></i></button>
