--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Youtube mobile</title>
   
 </head>
@@ -30,7 +31,7 @@
    <div class="description">
        <div class="hashtags
        "><a href="#">#드림코딩엘리</a> <a href="#">#유튜브클론코딩</a></div>
-       "><a href="#">#드림코딩엘리</a> <a href="#">#유튜브클론코딩</a></div>
+       
    </div>
    <div class="maintitle">클론코딩 유튜브 사이트 따라 만들기(HTML+CSS 연습편, 웹 포트폴리오) | 프론트엔드 개발자 입문편: HTML, CSS, Javascript
       <button class="maintitle_button"><i class="fas fa-sort-down"></i></button>
