--- a/ex.html
+++ b/ex.html
@@ -27,10 +27,8 @@
     <!-- Video Player -->
     <section class="player">
         <video  width="620" controls
-        poster="https://upload.wikimedia.org/wikipedia/commons/e/e8/Elephants_Dream_s5_both.jpg" >
-        <source
-          src="https://archive.org/download/ElephantsDream/ed_1024_512kb.mp4"
-          type="video/mp4">
+        poster="#" >
+        <source src="videos/Female artist sketching.mp4" type="video/mp4">
     </section>
         <!-- Video info & Up next -->
         <div class="infoAndUpNext">
@@ -38,15 +36,15 @@
     <section class="info">
         <div class="metadata">
             <ul class="hashtags">
-                <li>#DreamCoding</li>
-                <li>#DreamCoding</li>
-                <li>#Ellie</li>
+                <li>#ballerina</li>
+                <li>#drawing</li>
+                <li>#female artist</li>
             </ul>
             <div class="titleAndButton">
-                <span class="title clamp">
+                <div class="title clamp">
                     클론코딩 유튜브 사이트 따라 만들기(HTML+CSS 연습편, 웹 포트폴리오) | 프론트엔드 개발자 입문편: HTML, CSS, Javascriptdfadfadfafasfasdfafasfasfasdfaf
-                </span>
-                <button class="moreBtn">
+                </div>
+                <button class="moreBtn clicked">
                     <i class="fas fa-sort-down"></i>
                 </button>
             </div>
