--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </ul>
             <div class="titleAndButton">
                 <span class="title clamp">
-                    클론코딩 유튜브 사이트 따라 만들기(HTML+CSS 연습편, 웹 포트폴리오) | 프론트엔드 개발자 입문편: HTML, CSS, Javascriptdfadfadfafasfasdfafasfasfasdfaf
+                   ballerina drawing by artist
                 </span>
                 <button class="moreBtn clicked">
                     <i class="fas fa-sort-down"></i>
