--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </ul>
             <div class="titleAndButton">
                 <span class="title clamp">
-                   ballerina drawing by artist
+                   유튜브 모바일 프로젝트 중입니다. ---------------------------------------------------------------------------------------------------------------------------------------------------------------
                 </span>
                 <button class="moreBtn clicked">
                     <i class="fas fa-sort-down"></i>
